--- a/src/app/skillset/skillset.component.html
+++ b/src/app/skillset/skillset.component.html
@@ -1,1 +1,12 @@
-<p>skillset works!</p>
+<p class="h1">Skillset works</p>
+ <p class="h2">Technical Stack</p>
+ <ul>
+  <li >Frontend: Angular, Angular Material, RxJS, TypeScript, JavaScript, HTML/CSS</li>
+  <li >Backend: Node.js, Express.js, GraphQL, REST APIs</li>
+  <li >Cloud & DevOps: AWS Lambda, DynamoDB, Git</li>
+  <li >Databases: PostgreSQL, MySQL</li>
+  <li >Testing & Tools: Jest, NPM, GitHub</li>
+</ul>
+
+<p class="h2">Programming Languages</p>
+<p >JavaScript, TypeScript, Java, C</p>
