portfolio design changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,29 @@
+<style>
+.section {
+  min-height: 50px;
+  /* padding-top: 10px;  */
+}
+</style>
+<div class="custom-bg min-vh-100">
 
-<app-aboutme></app-aboutme>
-<app-skillset></app-skillset>
+<app-banner></app-banner>
+<div id="home" class="section container-fluid" >
+  <app-home></app-home>
+</div>
+<div id="about" class="section container-fluid" >
+  <app-aboutme></app-aboutme>
+</div>
+<div id="skills" class="section container-fluid">
+  <app-skillset></app-skillset>
+</div>
+<div id="work" class="section container-fluid">
+  <app-work-experience></app-work-experience>
+</div>
+<div id="education" class="section container-fluid">
+  <app-education></app-education>
+</div>
+<div id="contact" class="section container-fluid">
+  <app-contact> </app-contact>
+</div>
+
+</div>
