--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,3 +1,22 @@
-<p class="h1">About Me</p>
+<!-- <p class="h1">About Me</p>
 <p > 
-I’m Sneka G, a passionate Software Developer with 3 years of experience crafting scalable, full-stack applications. I specialize in both backend and frontend development, with hands-on experience using Node.js, Angular, and Express. I’m proficient in serverless architecture using AWS Lambda and have deep database expertise in PostgreSQL, MySQL, and DynamoDB. I love writing clean, maintainable code in TypeScript and JavaScript, and I’m enthusiastic about reactive programming with RxJS.</p>
+</p> -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center text-success mb-4">About Me</h2>
+    <div class="card p-4 shadow-sm">
+      <p>
+        I’m Sneka G, a passionate Software Developer with 3 years of experience crafting scalable, full-stack applications.
+      </p>
+      <p>
+        I specialize in both backend and frontend development, with hands-on experience using Node.js, Angular, and Express. 
+      </p>
+      <p>
+        I’m proficient in serverless architecture using AWS Lambda and have deep database expertise in PostgreSQL, MySQL, and DynamoDB.
+      </p>
+      <p>
+       I love writing clean, maintainable code in TypeScript and JavaScript, and I’m enthusiastic about reactive programming with RxJS.
+      </p>
+    </div>
+  </div>
+</section>
