--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .custom-bg {
-  font-family: 'Montserrat', sans-serif;
+  font-family:  ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background: radial-gradient(circle at center,#e6f4ea, #f2fbe8);
 
   }
