--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,8 +1,31 @@
 .divclass{
-  background-color: rgb(255, 255, 255);
+ 
+ background-color: rgb(255, 255, 255);
   height:50px;
-  padding-left: 50px;
 }
 .nav-link{
   color:black
 }
+.nav-link:hover{    
+  opacity: 1;
+  color: rgb(142 183 101 / var(--tw-bg-opacity, 1));
+}
+.name-bar{
+ padding-left: 50px;
+ padding-top:12px;
+  background: linear-gradient(to right, #8FC867, #DCEB98);
+  background-clip: text;
+  color: transparent;
+  font-weight: 700;
+  font-size: 1.5rem;
+  height:40px
+}
+// .gradient-text {
+//   background: linear-gradient(to right, #8FC867, #DCEB98);
+//   background-clip: text;
+//   -webkit-background-clip: text;
+//   color: transparent;
+//   -webkit-text-fill-color: transparent;
+//   font-weight: 700;
+//   font-size: 2.5rem;
+// }
