--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,6 @@
-<p class=" divclass d-flex  justify-content-between align-items-center">SNEKA G<span>
+<div class=" divclass d-flex  justify-content-between " >
+  <p class="  name-bar d-flex align-items-center">SNEKA G </p>
+  
 <ul class="nav  d-flex align-items-center">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="#home">Home</a>
@@ -19,9 +21,9 @@
     <a class="nav-link" href="#contact">Contact</a>
   </li>
 </ul>
-</span>
-</p>
 
+
+</div>
 
 
 
