--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     Node.js, JavaScript, and TypeScript
   </p>
 
-  <div class="btn-group mt-4  d-flex justify-content-between">
+  <div class=" mt-4  d-flex justify-content-between">
     <a href="mailto:sneka2207@gmail.com" class="btn custom-btn-green">sneka2207&#64;gmail.com</a>
     <a href="tel:+918525867120" class="btn custom-btn-white">+91 8525867120</a>
   </div>
