--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,7 +30,8 @@
   color: white;
   font-weight: 500;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius:30px
+  border-radius:30px;
+  margin-left:10px
 }
 .btn.custom-btn-green:hover{
   --tw-bg-opacity: 1
@@ -41,7 +42,8 @@
   color: #56ab2f;
   font-weight: 500;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.1);
-    border-radius:30px
+    border-radius:30px;
+     margin-left:20px
 
 }
  .circle {
