--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,24 +1,24 @@
-<div class=" divclass d-flex  justify-content-between " >
-  <p class="  name-bar d-flex align-items-center">SNEKA G </p>
+<div class="divclass d-flex justify-content-between sticky-banner">
+  <p class="name-bar d-flex align-items-center">SNEKA G </p>
   
-<ul class="nav  d-flex align-items-center">
+<ul class="nav d-flex align-items-center">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+    <a class="nav-link" id="link-home" href="#home">Home</a>
   </li>
   <li class="nav-item" >
-    <a class="nav-link "  href="#about">About Me</a>
+    <a class="nav-link" id="link-about" href="#about">About Me</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#skills">Skillset</a>
+    <a class="nav-link" id="link-skills" href="#skills">Skillset</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#work">Work Experience</a>
+    <a class="nav-link" id="link-work" href="#work">Work Experience</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#education">Education</a>
+    <a class="nav-link" id="link-education" href="#education">Education</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#contact">Contact</a>
+    <a class="nav-link" id="link-contact" href="#contact">Contact</a>
   </li>
 </ul>
 
