--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,7 +1,7 @@
 <section class="py-5">
   <div class="container">
     <h2 class="text-center text-success mb-4">Education</h2>
-    <div class="card p-4 shadow-sm">
+    <div class="card card-hover  p-4 shadow">
       <h5 class="fw-bold">B.E. Computer Science</h5>
       <p class="text-success">National Engineering College, Kovilpatti</p>
       <p>2018 - 2022</p>
