--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
   <h1 class="hero-title">SNEKA G</h1>
   <h4 class="hero-subtitle">SOFTWARE DEVELOPER</h4>
   <p class="hero-desc">
-    Backend Developer with 3+ years of experience building scalable server-side applications using
-    Node.js, JavaScript, and TypeScript
+    Software Developer with 3+ years of experience building scalable server-side applications using
+    Node.js, JavaScript, TypeScript and Angular
   </p>
 
   <div class=" mt-4  d-flex justify-content-between">
-    <a href="mailto:sneka2207@gmail.com" class="btn custom-btn-green">sneka2207&#64;gmail.com</a>
-    <a href="tel:+918525867120" class="btn custom-btn-white">+91 8525867120</a>
+    <a href="mailto:sneka2207@gmail.com" class="btn btn-lg px-4 py-3 custom-btn-green">sneka2207&#64;gmail.com</a>
+    <a href="tel:+918525867120" class="btn  btn-lg px-4 py-3 custom-btn-white">+91 8525867120</a>
   </div>
 
   
