--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -28,7 +28,7 @@ Software Developer Intern - Centizen Inc<span>
 <section class="py-5">
   <div class="container">
     <h2 class="text-center text-success mb-4">Experience</h2>
-    <div class="card p-4 shadow-sm">
+    <div class="card card-hover p-4 shadow">
       <h5 class="fw-bold">SOFTWARE DEVELOPER</h5>
       <p class="text-success">CENTIZEN INC | 2021 - 2025</p>
       <p><strong>Zenbasket (E-commerce Website)</strong></p>
