--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,7 +4,7 @@
 <section class="py-5 bg-light">
   <div class="container">
     <h2 class="text-center text-success mb-4">About Me</h2>
-    <div class="card p-4 shadow-sm">
+    <div class="card card-hover p-4 shadow">
       <p>
         I’m Sneka G, a passionate Software Developer with 3 years of experience crafting scalable, full-stack applications.
       </p>
