--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -20,12 +20,14 @@
   font-size: 1.5rem;
   height:40px
 }
-// .gradient-text {
-//   background: linear-gradient(to right, #8FC867, #DCEB98);
-//   background-clip: text;
-//   -webkit-background-clip: text;
-//   color: transparent;
-//   -webkit-text-fill-color: transparent;
-//   font-weight: 700;
-//   font-size: 2.5rem;
-// }
+.nav-link.active {
+  font-weight: 600;
+  color: #2e7d32 !important;
+  border-bottom: 2px solid #2e7d32;
+}
+.sticky-banner {
+  position: sticky;
+  top: 0;
+  z-index: 1050; // Bootstrap navbar default
+  background: white; // or your gradient
+}
