--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,18 +1,51 @@
-<!-- <p class="h1">Contact</p>
-<ul>
-  <li>📧 Email: sneka2207&#64;gmail.com </li>
-<li>
-💼 LinkedIn: linkedin.com/in/sneka-g-5aa10a169
-</li>
-</ul> -->
-
-<section class="py-5 bg-light">
+<!-- <section class="py-5 bg-light">
   <div class="container">
     <h2 class="text-center text-success mb-4">Contact</h2>
-    <div class="card p-4 shadow-sm text-center">
+    <div class="card p-4 shadow text-center">
       <p><strong>Email:</strong> sneka2207&#64;gmail.com</p>
       <p><strong>Phone:</strong> +91-8525867120</p>
       <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sneka-g-5aa10a169/" target="_blank">View Profile</a></p>
     </div>
   </div>
+</section> -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center text-success mb-4">Contact</h2>
+    <div class="card card-hover p-4 shadow">
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+        <div class="mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input id="name" type="text" class="form-control" formControlName="name" />
+          @if(contactForm.get('name')?.touched && contactForm.get('name')?.invalid){
+          <div  class="text-danger">
+            Name is required and should be at least 2 characters.
+          </div>
+        }
+        </div>
+
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input id="email" type="email" class="form-control" formControlName="email" />
+          @if(contactForm.get('email')?.touched && contactForm.get('email')?.invalid){
+          <div  class="text-danger">
+            Please enter a valid email.
+          </div>
+        }
+        </div>
+
+        <div class="mb-3">
+          <label for="message" class="form-label">Message</label>
+          <textarea id="message" rows="4" class="form-control" formControlName="message"></textarea>
+          @if(contactForm.get('message')?.touched && contactForm.get('message')?.invalid){
+          <div class="text-danger">
+            Message must be at least 10 characters.
+          </div>
+        }
+        </div>
+
+        <button type="submit" class="btn btn-success">Send Message</button>
+      </form>
+    </div>
+  </div>
 </section>
+
