--- a/src/app/skillset/skillset.component.html
+++ b/src/app/skillset/skillset.component.html
@@ -5,7 +5,7 @@
     <div class="row row-cols-2 row-cols-md-5 g-3">
      @for (skill of skills;track skill){
       <div class="col">
-        <div class="card p-3 text-center shadow-sm">{{ skill }}</div>
+        <div class="card card-hover  p-3 text-center shadow">{{ skill }}</div>
       </div>
     }
     </div>
