--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,18 +6,20 @@
     Node.js, JavaScript, TypeScript and Angular
   </p>
 
-  <div class=" mt-4  d-flex justify-content-between">
-    <a href="mailto:sneka2207@gmail.com" class="btn btn-lg px-4 py-3 custom-btn-green">sneka2207&#64;gmail.com</a>
-    <a href="tel:+918525867120" class="btn  btn-lg px-4 py-3 custom-btn-white">+91 8525867120</a>
+  <div class="mt-4 mx-auto w-100" style="max-width: 400px;">
+    <div class="d-flex flex-column flex-sm-row gap-2">
+      <a href="mailto:sneka2207@gmail.com" class="btn btn px-4 py-3 custom-btn-green w-100">sneka2207&#64;gmail.com</a>
+      <a href="tel:+918525867120" class="btn btn px-4 py-3 custom-btn-white w-100">+91 8525867120</a>
+    </div>
   </div>
 
   
 </div>
 
 <!-- Floating circles -->
-  <div class="circle circle-1"></div>
-  <div class="circle circle-2"></div>
-  <div class="circle circle-3"></div>
-  <div class="circle circle-4"></div>
-  <div class="circle circle-5"></div>
+  <div class="circle circle-1 d-none d-sm-block"></div>
+  <div class="circle circle-2 d-none d-sm-block"></div>
+  <div class="circle circle-3 d-none d-sm-block"></div>
+  <div class="circle circle-4 d-none d-sm-block"></div>
+  <div class="circle circle-5 d-none d-sm-block"></div>
 
