mobile screen changess

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div class="divclass d-flex justify-content-between sticky-banner">
   <p class="name-bar d-flex align-items-center">SNEKA G </p>
-  
-<ul class="nav d-flex align-items-center">
+  <div class="d-none d-md-flex">
+    <ul class="nav d-flex align-items-center ">
   <li class="nav-item">
     <a class="nav-link" id="link-home" href="#home">Home</a>
   </li>
@@ -21,7 +21,31 @@
     <a class="nav-link" id="link-contact" href="#contact">Contact</a>
   </li>
 </ul>
+</div>
 
+<div class="d-block d-md-none">  
+    <ul class="nav mobile-bottom-nav d-flex align-items-center ">
+  <li class="nav-item">
+    <a class="nav-link" id="link-home-mobile" href="#home">Home</a>
+  </li>
+  <li class="nav-item" >
+    <a class="nav-link" id="link-about-mobile" href="#about">About Me</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="link-skills-mobile" href="#skills">Skillset</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="link-work-mobile" href="#work">Work Experience</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="link-education-mobile" href="#education">Education</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="link-contact-mobile" href="#contact">Contact</a>
+  </li>
+</ul>
+
+</div>
 
 </div>
 
