--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="py-5 bg-light">
+<section class="contact-section py-5 bg-light">
   <div class="container">
     <h2 class="text-center text-success mb-4">Contact</h2>
     <div class="card card-hover p-4 shadow">
