--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,32 @@
-<div class="hero-section d-flex flex-column align-items-center justify-content-center text-center">
+
+<div class="hero-section hero-desktop d-none d-md-flex flex-column align-items-center justify-content-center text-center">
   <h1 class="hero-title">SNEKA G</h1>
   <h4 class="hero-subtitle">SOFTWARE DEVELOPER</h4>
   <p class="hero-desc">
     Software Developer with 3+ years of experience building scalable server-side applications using
     Node.js, JavaScript, TypeScript and Angular
   </p>
-
   <div class="mt-4 mx-auto w-100" style="max-width: 400px;">
     <div class="d-flex flex-column flex-sm-row gap-2">
       <a href="mailto:sneka2207@gmail.com" class="btn btn px-4 py-3 custom-btn-green w-100">sneka2207&#64;gmail.com</a>
       <a href="tel:+918525867120" class="btn btn px-4 py-3 custom-btn-white w-100">+91 8525867120</a>
     </div>
   </div>
+</div>
 
-  
+<div class="hero-section hero-mobile d-flex d-md-none flex-column align-items-center justify-content-center text-center">
+  <h1 class="hero-title">SNEKA G</h1>
+  <h4 class="hero-subtitle">SOFTWARE DEVELOPER</h4>
+  <p class="hero-desc">
+    Software Developer with 3+ years of experience building scalable server-side applications using
+    Node.js, JavaScript, TypeScript and Angular
+  </p>
+  <div class="mt-4 mx-auto w-100" style="max-width: 400px;">
+    <div class="d-flex flex-column flex-sm-row gap-2">
+      <a href="mailto:sneka2207@gmail.com" class="btn btn px-4 py-3 custom-btn-green w-100">sneka2207&#64;gmail.com</a>
+      <a href="tel:+918525867120" class="btn btn px-4 py-3 custom-btn-white w-100">+91 8525867120</a>
+    </div>
+  </div>
 </div>
 
 <!-- Floating circles -->
