--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,5 +1,7 @@
 <div class="divclass d-flex justify-content-between sticky-banner">
-  <p class="name-bar d-flex align-items-center">SNEKA G </p>
+  <!-- <p class="name-bar d-flex align-items-center">SNEKA G </p> -->
+<p class="name-bar d-none d-md-flex align-items-center">SNEKA G</p>
+<p class="name-bar d-flex d-md-none justify-content-center w-100">SNEKA G</p>
   <div class="d-none d-md-flex">
     <ul class="nav d-flex align-items-center ">
   <li class="nav-item">
@@ -26,22 +28,40 @@
 <div class="d-block d-md-none">  
     <ul class="nav mobile-bottom-nav d-flex align-items-center ">
   <li class="nav-item">
-    <a class="nav-link" id="link-home-mobile" href="#home">Home</a>
+    <a class="nav-link" id="link-home-mobile" href="#home">
+      <i class="bi bi-house"></i>
+    
+    </a>
   </li>
   <li class="nav-item" >
-    <a class="nav-link" id="link-about-mobile" href="#about">About Me</a>
+    <a class="nav-link" id="link-about-mobile" href="#about">
+      <i class="bi bi-person"></i>
+     
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="link-skills-mobile" href="#skills">Skillset</a>
+    <a class="nav-link" id="link-skills-mobile" href="#skills">
+      <i class="bi bi-gear"></i>
+   
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="link-work-mobile" href="#work">Work Experience</a>
+    <a class="nav-link" id="link-work-mobile" href="#work">
+      <i class="bi bi-briefcase"></i>
+      
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="link-education-mobile" href="#education">Education</a>
+    <a class="nav-link" id="link-education-mobile" href="#education">
+      <i class="bi bi-mortarboard"></i>
+    
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="link-contact-mobile" href="#contact">Contact</a>
+    <a class="nav-link" id="link-contact-mobile" href="#contact">
+      <i class="bi bi-envelope"></i>
+     
+    </a>
   </li>
 </ul>
 
